# UV-SLAM

./: .gitmodules  README.md
ELSED/: .gitignore  CMakeLists.txt  Python_ELSED.ipynb  README.md
ELSED/src/: ELSED.cpp  ELSED.h  EdgeDrawer.cpp  EdgeDrawer.h  FullSegmentInfo.cpp  FullSegmentInfo.h  Utils.h  main.cpp
benchmark_publisher/launch/: publish.launch
benchmark_publisher/src/: benchmark_publisher_node.cpp
camera_model/include/camodocal/camera_models/: CameraFactory.h  PinholeCamera.h  ScaramuzzaCamera.h
camera_model/src/camera_models/: CameraFactory.cc  PinholeCamera.cc
config/: vins_rviz_config.rviz
config/euroc/: euroc_config.yaml
config/void/: void_config.yaml
feature_tracker/: CMakeLists.txt  package.xml
feature_tracker/src/: feature_tracker.cpp  feature_tracker.h  feature_tracker_node.cpp  line_feature_tracker.cpp  line_feature_tracker.h  parameters.cpp  parameters.h  utility.cpp  utility.h
pose_graph/src/: pose_graph_node.cpp
vins_estimator/: CMakeLists.txt  package.xml
vins_estimator/launch/: euroc.launch  vins_rviz.launch  void.launch
vins_estimator/src/: estimator.cpp  estimator.h  estimator_node.cpp  feature_manager.cpp  feature_manager.h  parameters.cpp  parameters.h
vins_estimator/src/factor/: imu_factor.h  line_projection_factor.cpp  line_projection_factor.h  projection_factor.cpp  projection_factor.h  projection_td_factor.cpp  vp_projection_factor.cpp  vp_projection_factor.h
vins_estimator/src/initial/: initial_alignment.h  initial_sfm.cpp  solve_5pts.cpp
vins_estimator/src/utility/: visualization.cpp  visualization.h
